docs/v0.1.0/_sources/gallery/non_maximum_suppression.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/non_maximum_suppression.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_non_maximum_suppression.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_non_maximum_suppression.py:


Non-Maximum Suppression for Gaussian Pulse Detection
====================================================

This example demonstrates the use of the NonMaximumSuppression class to detect
Gaussian pulses in a one-dimensional signal. It generates a synthetic dataset
of Gaussian pulses, applies the non-maximum suppression algorithm, and plots
the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-36

.. code-block:: Python


    from DeepPeak.detection import NonMaximumSuppression
    from DeepPeak.generation import SignalGenerator
    from DeepPeak import Gaussian, UniformCount

    NUM_PEAKS = 3
    SEQUENCE_LENGTH = 400

    generator = SignalGenerator(sequence_length=SEQUENCE_LENGTH)

    kernel = Gaussian(
        amplitude=(10, 300),  # Amplitude range
        position=(0, SEQUENCE_LENGTH),  # Peak position range
        width=0.02,
    )

    dataset = generator.generate(
        n_samples=6,
        kernel=kernel,
        peak_count=UniformCount(bounds=(3, 3)),
        noise_std=0,  # Add some noise
        categorical_peak_count=False,
    )

    dataset.plot(reference_pulse_trace=dataset.clean_signals)




.. image-sg:: /gallery/images/sphx_glr_non_maximum_suppression_001.png
   :alt: Sample 0, Sample 1, Sample 2
   :srcset: /gallery/images/sphx_glr_non_maximum_suppression_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x900 with 3 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 37-38

Configure and run the detector

.. GENERATED FROM PYTHON SOURCE LINES 38-50

.. code-block:: Python

    peak_locator = NonMaximumSuppression(
        gaussian_sigma=kernel.width,
        threshold="auto",
        maximum_number_of_pulses=5,
        kernel_truncation_radius_in_sigmas=5,
    )


    result = peak_locator.run(time_samples=dataset.x_values, signal=dataset.signals[0])

    batch = peak_locator.run_batch(time_samples=dataset.x_values, signal=dataset.signals)








.. GENERATED FROM PYTHON SOURCE LINES 51-52

Plot the results

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: Python

    batch.plot_histogram_counts()




.. image-sg:: /gallery/images/sphx_glr_non_maximum_suppression_002.png
   :alt: Detected peaks per sample
   :srcset: /gallery/images/sphx_glr_non_maximum_suppression_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 500x340 with 1 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 55-56

Plot the results

.. GENERATED FROM PYTHON SOURCE LINES 56-57

.. code-block:: Python

    batch.plot(ncols=3, max_plots=6, true_position=dataset.positions, show_kernel=True)



.. image-sg:: /gallery/images/sphx_glr_non_maximum_suppression_003.png
   :alt: Sample #0 (K=5, detected=5), Sample #1 (K=5, detected=5), Sample #2 (K=5, detected=5), Sample #3 (K=5, detected=5), Sample #4 (K=5, detected=5), Sample #5 (K=5, detected=5)
   :srcset: /gallery/images/sphx_glr_non_maximum_suppression_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 1950x560 with 6 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.498 seconds)


.. _sphx_glr_download_gallery_non_maximum_suppression.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: non_maximum_suppression.ipynb <non_maximum_suppression.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: non_maximum_suppression.py <non_maximum_suppression.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: non_maximum_suppression.zip <non_maximum_suppression.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
